<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/receive_qr"
    android:layout_width="249dp"
    android:layout_height="249dp"
    android:layout_weight="1"
    android:layout_marginTop="@dimen/x10"
    android:layout_marginStart="@dimen/x10"
    android:layout_marginEnd="@dimen/x10"
    android:layout_gravity="center"
    android:paddingTop="@dimen/x1"
    android:paddingBottom="@dimen/x1"
    android:paddingStart="@dimen/x1"
    android:paddingEnd="@dimen/x1"
    android:scaleType="fitCenter"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:src="@drawable/green_circled_bg"/>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="@dimen/x10"
    android:paddingTop="@dimen/x3"
    android:paddingStart="@dimen/x2"
    android:paddingEnd="@dimen/x2"
    android:background="@color/background_color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/receive_qr">
    <TextView
      android:id="@+id/receive_tutorial_header"
      style="@style/TextAppearance.Capital.Header4.Left"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/receive_tutorial_header"
      android:textSize="15sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/receive_tutorial_subheader"
      style="@style/TextAppearance.Capital.Body.Left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/receive_tutorial_subheader"
      android:layout_marginTop="@dimen/x1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/receive_tutorial_header"/>

    <TextView
      android:id="@+id/receive_tutorial_first"
      style="@style/TextAppearance.Capital.Body.Left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/ic_first"
      android:drawablePadding="@dimen/x2"
      android:text="@string/send"
      android:layout_marginTop="@dimen/x2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/receive_tutorial_subheader"/>

    <TextView
      android:id="@+id/receive_tutorial_second"
      style="@style/TextAppearance.Capital.Body.Left"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/ic_first"
      android:drawablePadding="@dimen/x2"
      android:layout_marginTop="@dimen/x2"
      android:text="@string/scan_qr_code"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/receive_tutorial_first"/>


    <Button
      android:id="@+id/receive_with_amount"
      style="@style/FullWidthButtonStyle"
      android:layout_margin="@dimen/margin_padding_by_side"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/x2"
      android:layout_marginStart="@dimen/x1"
      android:layout_marginEnd="@dimen/x1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      android:text="@string/enter_amount_button"
      tools:text="Next" />



  </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>