<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground">

    <TextView
        android:id="@+id/title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/x2"
        android:textColor="@color/titleDarkGreyBlue"
        android:textSize="23sp"
        android:text="@string/profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/howItWorksCard"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="@dimen/x2"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="@dimen/x2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/question_mark"
            android:textColor="@color/lightRed"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profileProfileCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/x2"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/howItWorksCard"
        app:layout_constraintVertical_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profileNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x2"
                android:layout_marginTop="@dimen/x3"
                android:fontFamily="@font/sora_semibold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="aasdasda asd sa" />

            <TextView
                android:id="@+id/phoneNumberTv"
                style="@style/GreyTextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/x2"
                android:layout_marginBottom="@dimen/x3"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileNameTv"
                tools:text="aasdasda@asd.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileMyReputationTextView"
        style="@style/GreenBlueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/icon_statistics"
        android:drawablePadding="@dimen/x1"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/margin_padding_by_side"
        android:paddingTop="@dimen/x2_5"
        android:paddingEnd="@dimen/margin_padding_by_side"
        android:paddingBottom="@dimen/x2_5"
        android:text="@string/my_reputation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileProfileCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileMyReputationNumber"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="@dimen/x2"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:minWidth="40dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/oceanBlue"
        app:cardCornerRadius="@dimen/x2"
        app:layout_constraintBottom_toBottomOf="@+id/profileMyReputationTextView"
        app:layout_constraintEnd_toStartOf="@+id/profileReputationArrow"
        app:layout_constraintTop_toTopOf="@+id/profileMyReputationTextView">

        <TextView
            android:id="@+id/userReputationAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/x1"
            android:layout_marginEnd="@dimen/x1"
            android:drawableLeft="@drawable/icon_cup"
            android:drawablePadding="@dimen/x1"
            android:fontFamily="@font/sora_regular"
            android:gravity="center"
            android:text="412.61234"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/profileReputationArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_content"
        android:paddingEnd="@dimen/margin_padding_content"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/profileMyReputationNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileMyReputationNumber" />

    <View
        android:id="@+id/projectDetailSeparateLineView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/profileDividerColor"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileMyReputationTextView" />

    <TextView
        android:id="@+id/profileVotesTextView"
        style="@style/GreenBlueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/icon_vote_shape"
        android:drawablePadding="@dimen/x1"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/margin_padding_by_side"
        android:paddingTop="@dimen/profileListItemTopBottomPadding"
        android:paddingEnd="@dimen/margin_padding_by_side"
        android:paddingBottom="@dimen/profileListItemTopBottomPadding"
        android:text="@string/votes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDetailSeparateLineView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileVotesNumber"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="@dimen/x2"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:minWidth="70dp"
        app:cardBackgroundColor="@color/oceanBlue"
        app:cardCornerRadius="@dimen/x2"
        app:layout_constraintBottom_toBottomOf="@+id/profileVotesTextView"
        app:layout_constraintEnd_toStartOf="@+id/profileReputationArrow"
        app:layout_constraintTop_toTopOf="@+id/profileVotesTextView">

        <TextView
            android:id="@+id/profileVotesAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/x1"
            android:layout_marginEnd="@dimen/x1"
            android:drawableStart="@drawable/icon_profile_vote"
            android:drawablePadding="@dimen/x1"
            android:fontFamily="@font/sora_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="30000000000000" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/profileVotesArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_content"
        android:paddingEnd="@dimen/margin_padding_content"
        app:layout_constraintBottom_toBottomOf="@+id/profileVotesNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileVotesNumber"
        app:srcCompat="@drawable/ic_chevron_right" />

    <View
        android:id="@+id/projectDetailSeparateLineView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/profileDividerColor"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileVotesTextView" />

    <TextView
        android:id="@+id/profileDetailsTextView"
        style="@style/GreenBlueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/icon_person"
        android:drawablePadding="@dimen/x1"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/margin_padding_by_side"
        android:paddingTop="@dimen/profileListItemTopBottomPadding"
        android:paddingEnd="@dimen/margin_padding_by_side"
        android:paddingBottom="@dimen/profileListItemTopBottomPadding"
        android:text="@string/personal_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDetailSeparateLineView2" />

    <ImageView
        android:id="@+id/profileDetailsArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_content"
        android:paddingEnd="@dimen/x1"
        app:layout_constraintBottom_toBottomOf="@+id/profileDetailsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileDetailsTextView"
        app:srcCompat="@drawable/ic_chevron_right" />

    <View
        android:id="@+id/projectDetailSeparateLineView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/x2"
        android:layout_marginEnd="@dimen/x2"
        android:background="@color/profileDividerColor"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileDetailsTextView" />

    <TextView
        android:id="@+id/profilePassphraseTextView"
        style="@style/GreenBlueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/icon_pass"
        android:drawablePadding="@dimen/x1"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/margin_padding_by_side"
        android:paddingTop="@dimen/profileListItemTopBottomPadding"
        android:paddingEnd="@dimen/margin_padding_by_side"
        android:paddingBottom="@dimen/profileListItemTopBottomPadding"
        android:text="@string/passphrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDetailSeparateLineView3" />

    <ImageView
        android:id="@+id/profilePassphraseArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_content"
        android:paddingEnd="@dimen/margin_padding_content"
        app:layout_constraintBottom_toBottomOf="@+id/profilePassphraseTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePassphraseTextView"
        app:srcCompat="@drawable/ic_chevron_right" />

    <View
        android:id="@+id/projectDetailSeparateLineView4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/profileDividerColor"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePassphraseTextView" />

    <TextView
        android:id="@+id/profileConversionTextView"
        style="@style/GreenBlueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/icon_average"
        android:drawablePadding="@dimen/x1"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/margin_padding_by_side"
        android:paddingTop="@dimen/profileListItemTopBottomPadding"
        android:paddingEnd="@dimen/margin_padding_by_side"
        android:paddingBottom="@dimen/profileListItemTopBottomPadding"
        android:text="@string/conversion"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDetailSeparateLineView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileConversionNumber"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="@dimen/x2"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:minWidth="@dimen/x4"
        android:visibility="gone"
        app:cardBackgroundColor="@color/oceanBlue"
        app:cardCornerRadius="@dimen/x2"
        app:layout_constraintBottom_toBottomOf="@+id/profileConversionTextView"
        app:layout_constraintEnd_toStartOf="@+id/profileReputationArrow"
        app:layout_constraintTop_toTopOf="@+id/profileConversionTextView">

        <TextView
            android:id="@+id/profileConversionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/x2"
            android:layout_marginEnd="@dimen/x2"
            android:fontFamily="@font/sora_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="$" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/profileConversionArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_content"
        android:paddingEnd="@dimen/margin_padding_content"
        android:src="@drawable/ic_chevron_right"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/profileConversionNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileConversionNumber" />

    <View
        android:id="@+id/projectDetailSeparateLineView5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/profileDividerColor"
        android:importantForAccessibility="no"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileConversionTextView" />

    <TextView
        android:id="@+id/profileAboutTextView"
        style="@style/GreenBlueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableStart="@drawable/icon_terms"
        android:drawablePadding="@dimen/x1"
        android:foreground="?selectableItemBackground"
        android:paddingStart="@dimen/margin_padding_by_side"
        android:paddingTop="@dimen/profileListItemTopBottomPadding"
        android:paddingEnd="@dimen/margin_padding_by_side"
        android:paddingBottom="@dimen/profileListItemTopBottomPadding"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDetailSeparateLineView5" />

    <ImageView
        android:id="@+id/profileAboutArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_padding_content"
        android:layout_marginBottom="8dp"
        android:paddingEnd="@dimen/margin_padding_content"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/profileAboutTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectDetailSeparateLineView5" />

</androidx.constraintlayout.widget.ConstraintLayout>
